<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/email"
        android:textColorHint="@android:color/darker_gray"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="51dp"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        android:layout_alignTop="@+id/editText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button2"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignStart="@id/editText2"
        android:layout_alignLeft="@id/editText2"
        android:layout_alignEnd="@id/editText2"
        android:layout_alignRight="@id/editText2"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:onClick="startItemsListActivity"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/button"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignStart="@id/editText2"
        android:layout_alignLeft="@id/editText2"
        android:layout_alignEnd="@id/editText2"
        android:layout_alignRight="@id/editText2"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:onClick="startRegisterActivity"/>

</RelativeLayout>