<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="wme.mt.de.infbox_android_g43.RegisterActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText"
        android:hint="@string/full_name"
        android:textColorHint="@android:color/darker_gray"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="51dp"
        android:hint="@string/email"
        android:textColorHint="@android:color/darker_gray"
        android:layout_alignTop="@+id/editText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/button"
        android:layout_below="@+id/checkBox"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignStart="@id/editText2"
        android:layout_alignLeft="@id/editText2"
        android:layout_alignEnd="@id/editText2"
        android:layout_alignRight="@id/editText2"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:onClick="startLoginActivity" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept_conditions"
        android:id="@+id/checkBox"
        android:layout_below="@+id/editText2"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_marginTop="16dp"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray" />

</RelativeLayout>
